--- a/Stat/HW4/HW4.tex
+++ b/Stat/HW4/HW4.tex
@@ -210,7 +210,7 @@
       and check whether the composite error $\alpha_1 a_2 + u_1$ is uncorrelated with the explanatory variables.
     \subsection*{solution}
       \begin{proof}
-        as given in the hint, $y_2^0 = z_2\lambda_2 + a_2$ such that $\ee(z_2'a_2)=0$. substituting this into the main equation, $y_1 = z_1\delta_1+\alpha_1(z_2\lambda_2+a_2)+u_1y_1 = z_1\delta_1 + \alpha_1z_2\lambda_2 + (\alpha_1a_2+u_1)$. for consistency, $\alpha_1a_2 + u_1$ needs to be uncorrelated with both $z_1$ and $y_2^0$. from assumptions given in the question, we know that $\ee(z_1'u_1)=0$. however, $\ee(z_1'a_2)\ne0$ due to the exlusion of $z_1$ from the linear projection. with this in my mind, we can say that $\hat{\delta}_1,\hat{\alpha}_1$ are generally inconsistent. they would be consistent if $z_1, z_2$ are uncorrelated, $y_2$ is unrelated to $z_1$, or if $\alpha_1=0$. important takeaways are that due to the omission of $z_1$ from the first stage is akin to incorrectly excluding relevant instruments, creating correlation between $a_2$ and the exogenous variables. thus, it is necessary to use valid instruments in the first stage. 
+        as given in the hint, $y_2^0 = z_2\lambda_2 + a_2$ such that $\EE(z_2'a_2)=0$. substituting this into the main equation, $y_1 = z_1\delta_1+\alpha_1(z_2\lambda_2+a_2)+u_1y_1 = z_1\delta_1 + \alpha_1z_2\lambda_2 + (\alpha_1a_2+u_1)$. for consistency, $\alpha_1a_2 + u_1$ needs to be uncorrelated with both $z_1$ and $y_2^0$. from assumptions given in the question, we know that $\ee(z_1'u_1)=0$. however, $\ee(z_1'a_2)\ne0$ due to the exlusion of $z_1$ from the linear projection. with this in my mind, we can say that $\hat{\delta}_1,\hat{\alpha}_1$ are generally inconsistent. they would be consistent if $z_1, z_2$ are uncorrelated, $y_2$ is unrelated to $z_1$, or if $\alpha_1=0$. important takeaways are that due to the omission of $z_1$ from the first stage is akin to incorrectly excluding relevant instruments, creating correlation between $a_2$ and the exogenous variables. thus, it is necessary to use valid instruments in the first stage. 
       \end{proof}
 \end{document}
 
