--- a/Micro/HW6/HW6.tex
+++ b/Micro/HW6/HW6.tex
@@ -114,6 +114,17 @@
   \begin{center}
     \includegraphics[width = 0.25\textwidth]{fig1.png}
   \end{center}
+  \subsection*{Solution}
+    There is one pure subgame equilibrium in which player 1 chooses A every time, leaving the rest of the moves irrelevant and thus player 2 is indifferent.
+    \begin{gather*}
+      ((A,C),(X,Y))
+    \end{gather*}
+    Further, there is a mixed strategy in which Player 2 will play W, thus drawing Player 1 to play B
+    \begin{gather*}
+      \EE(Y) = 8, \EE(Z) = 24 \\
+      8Y = 24Z \rightarrow Y = 3Z \\
+      Y + Z = 1 \rightarrow 3Z + Z = 1 \Rightarrow Z = \frac{1}{4} \\ 
+      \therefore Y = \frac{3}{4}
 \section*{Problem 3. Sandholm PS3 \# 7}
   (i) Find all subgame perfect equilibria of the game in Figure 3 below when $z=3$.
   (ii) Determine the reduced normal form of this game when $z=3$.
