--- a/Micro/HW6/HW6.tex
+++ b/Micro/HW6/HW6.tex
@@ -156,21 +156,24 @@
   \subsubsection*{(ii)} 
   Suppose that Arthur wins the coin toss. Compare his equilibrium behavior with his optimal behavior in the absence of competition. Provide intuition for any similarities or differences you find.
   \subsection*{Solution}
-    \begin{center}
-      \begin{tabular}{|c|c|c|c|c|c|c|}
-        \hline
-        & 1 & 2 & 3 & 4 & 5 & 6 \\
-        \hline
-        1 & A1 & A1 & A1 & A1 & A1 & A1 \\
-        2 & A2 & A2 & A2 & A1 & A1 & A1 \\
-        3 & A3 & A3 & A3 & A1 & A1 & A1 \\
-        4 & A0 & A0 & A0 & A1 & A1 & A1 \\
-        5 & A0 & A0 & A0 & A2 & A2 & A2 \\
-        6 & A0 & A0 & A0 & A3 & A3 & A3 \\
-        \hline
-      \end{tabular}
-    \end{center}
-  The game exhibits first mover advantage. Thus the optimal path is to move as quickly as possible for both players. Player 1 will move 3, with player 2 choosing not to move since they are unable to win. Thus, player 1 will then only move in single step increments, minimizing cost. This leads to player 1 spending 21 and player 2 spending 0. 
+    \subsubsection*{(i)}
+      \begin{center}
+        \begin{tabular}{|c|c|c|c|c|c|c|}
+          \hline
+          & 1 & 2 & 3 & 4 & 5 & 6 \\
+          \hline
+          1 & A1 & A1 & A1 & A1 & A1 & A1 \\
+          2 & A2 & A2 & A2 & A1 & A1 & A1 \\
+          3 & A3 & A3 & A3 & A1 & A1 & A1 \\
+          4 & A0 & A0 & A0 & A1 & A1 & A1 \\
+          5 & A0 & A0 & A0 & A2 & A2 & A2 \\
+          6 & A0 & A0 & A0 & A3 & A3 & A3 \\
+          \hline
+        \end{tabular}
+      \end{center}
+    The game exhibits first mover advantage. Thus the optimal path is to move as quickly as possible for both players. Player 1 will move 3, with player 2 choosing not to move since they are unable to win. Thus, player 1 will then only move in single step increments, minimizing cost. This leads to player 1 spending 21 and player 2 spending 0. 
+  \subsubsection*{(ii)}
+    In the absence of competition, the need to move 3 at the start is eliminated, thus the player will move 1 step at a time, minimizing cost.
   \begin{center}
     \includegraphics[width=0.25\textwidth]{fig3.png}
   \end{center}
