--- a/Macro/PS7/ps7.tex
+++ b/Macro/PS7/ps7.tex
@@ -1,4 +1,4 @@
-%% ECON 8040 - Macro: Problem Set 6 %%
+%% ECON 8040 - Macro: Problem Set 7 %%
 \documentclass[10pt, a4paper]{article}
 \usepackage[top=3cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd, fancyhdr, color, comment, graphicx, environ}
@@ -14,7 +14,7 @@
 %Fill in the appropriate information below
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}     
 \newcommand\course{ECON - 8040}                            
-\newcommand\hwnumber{6}                                 
+\newcommand\hwnumber{7}                                 
 \newcommand\Information{Tate Mason}                        
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -39,6 +39,7 @@
 \newcommand{\Q}{\mathbb Q}
 \newcommand{\NN}{\mathbb N}
 \newcommand{\PP}{\mathbb P}
+\newcommand{\sumt}{$\sum\limits_{t=0}^{\infty}$}
 \DeclareMathOperator{\Mod}{Mod}
 \newtheorem*{theorem}{Theorem}
 \newtheorem*{lemma}{Lemma}
@@ -112,5 +113,30 @@
     \item Write down FOCs and envelope conditions for this Bellman equation.
     \item Write down equations that characterize the steady state.
     \end{enumerate}
-
+  \subsection*{Solutions}
+    \subsubsection*{(a)}
+      \begin{gather*}
+        {\max\atop{c_t, n_t, N_t, Y_t, k_{Ht}, K_{Mt}}} \ \sumt\beta^t\log(c_t)\\
+        \left s.t. \\
+        c_t = [\mu c_{Mt}^{\rho} + (1-\mu)c_{Ht}^{\rho}]^{\frac{1}{\rho}}\\
+        c_{Ht} = k_{Ht}^{\alpha}n_{Ht}^{1-\alpha} \\
+        Y_t = K_{Mt}^{\alpha}N_{Mt}^{1-\alpha} \\
+        Y_t = c_{Mt} + x_{Mt} + x_{Ht} \\
+        K_{Mt+1} = (1-\delta_M)K_{Mt} + x_{Mt} \\
+        k_{Ht+1} = (1-\delta_H)k_{Ht} + x{Ht} \\
+        n_{Ht} + N_{Mt} = 1 \\
+        k_{H0}, K_{M0} \ given
+      \end{gather*}
+    \subsubsection*{(b)}
+      \begin{gather*}
+        v(k_{Ht}, K_{Mt}) = {\max\atop{N_t, k_{Ht+1}, K_{Mt+1}}} \ \log(Z^{\frac{1}{\rho}}) + \beta v(k_{Ht+1},K_{Mt+1}) \\
+        \left s.t. \\
+        Z \equiv \mu c_{M}^{\rho} + (1-\mu)[k_{Ht}^{\alpha}(1-N_{Mt})^{1-\alpha}]^{\rho} \\
+        c_t = Z^{\frac{1}{\rho}}\\
+        c_{Ht} = k_{Ht}^{\alpha}(1-N_{Mt})^{1-\alpha}
+        c_{Mt} + k_{Ht+1} + K_{Mt+1} = K_{MT}^{\alpha}N_{MT}^{1-\alpha} + (1-\delta_H)k_{Ht} + (1-\delta_M)K_{Mt} \\
+        K_{Mt+1} = (1-\delta_M)K_{Mt} + x_{Mt} \\
+        k_{Ht+1} = (1-\delta_H)k_{Ht} + x{Ht} \\
+      \end{gather*}
+      In this case, the state variables are $K_{Mt}$ and $k_{Ht}$ as we have some sort of control over labor, consumption, and investment. 
 \end{document}
